tests/fixtures/valid/error_output.mmd
flowchart TD
    Start --> A[error 'This is an error message']
    A --> End
