tests/fixtures/invalid/invalid_syntax.mmd
flowchart TD
    Start --> A[x = ]
    A --> End
